Build with JDK21 and Java 11 compatibility.